# accesslens

./: .gitignore  Makefile  README.md  pyproject.toml
backend/app/: config.py  inference.py  logging_setup.py  main.py  models.py  spatial.py  ws.py
backend/scripts/: benchmark.py  download_models.sh  run.sh
backend/tests/: conftest.py  test_inference.py  test_spatial.py  test_websocket.py
docs/: 11_VERIFICATION_CHECKLIST.md
eval/: save_frames.py
eval/results/: post_tuning.json  pre_tuning.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DetectionOverlay.tsx  NarrationLog.tsx  SettingsPanel.tsx  StartScreen.tsx  StatsHUD.tsx  WebcamCapture.tsx
frontend/components/landing/: CTASection.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingPage.tsx  ProblemSection.tsx  TechSection.tsx  WebGLBackground.tsx
frontend/lib/: constants.ts  format.ts  narrator.ts  settings.tsx  speech.ts  tracker.ts  types.ts  useNarrator.ts  ws.ts
frontend/lib/__tests__/: format.test.ts  narrator.test.ts  tracker.test.ts
